disable UseCompactObjectHeaders in JVM arguments